header com banner de apresentacao

--- a/src/index.html
+++ b/src/index.html
@@ -2,15 +2,36 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/reset.css">
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Escritório de Contabilidade</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./assets/css/reset.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
+  <title>Escritório de Contabilidade</title>
 </head>
 
 <body>
-
+  <header>
+    <div id="header-topo">
+      <img src="./assets/imagens/logo-salles 1.svg" alt="Logo">
+      <nav>
+        <ul>
+          <li><a href="">INÍCIO</a></li>
+          <li><a href="">PERFIL</a></li>
+          <li><a href="">SERVIÇOS</a></li>
+          <li><a href="">CLIENTES</a></li>
+          <li><a href="">CONTATOS</a></li>
+        </ul>
+      </nav>
+    </div>
+    <div id="apresentacao">
+      <h1>Sales</h1>
+      <h1>Contabilidade</h1>
+      <p>Experiência. Compromisso. Valor.</p>
+    </div>
+  </header>
+  <main>
+    <h1>Continua aqui</h1>
+  </main>
 </body>
 
 </html>
