Secao de servicos

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,57 @@
     </div>
   </header>
   <main>
-    <h1>Continua aqui</h1>
+    <div class="container">
+      <section id="perfil">
+        <img src="./assets/imagens/perfil.svg" width="746px" height="508px" alt="perfil da empresa">
+        <section id="perfil-texto">
+          <h1>
+            Perfil da Empresa
+          </h1>
+          <p>Fundada em 1960, a Salles Contabilidade é uma empresa de serviços completos, oferecendo soluções acessíveis
+            em
+            contabilidade para pessoas e negócios locais e internacionais.</p>
+          <button type="button">Saiba mais > </button>
+        </section>
+      </section>
+      <section id="servicos">
+        <h1>Nossos Serviços</h1>
+        <div id="servicos-container">
+          <div id="listas-container">
+            <div id="lista-numeros">
+              <p>01</p>
+              <p>02</p>
+              <p>03</p>
+              <p id="last-number">04</p>
+            </div>
+            <div id="lista-texto">
+              <div>
+                <p class="titulo">Preparação Fiscal</p>
+                <p class="descricao">Preparamos tudo o que você precisa para o imposto de renda</p>
+              </div>
+              <div>
+                <p class="titulo">Pacote de Startup</p>
+                <p class="descricao">Criamos modelos financeiros que você pode apresentar a investclassores</p>
+              </div>
+              <div>
+                <p class="titulo">Gestão Patrimonial</p>
+                <p class="descricao">Fornecemos serviços inteligentes de consultoria em investimentos</p>
+              </div>
+              <div>
+                <p class="titulo">Consultoria Fiscal</p>
+                <p class="descricao">Oferecemos suporte especializado para na gestão de suas obrigações fiscais e
+                  tributárias
+                </p>
+              </div>
+
+            </div>
+          </div>
+          <img src="./assets/imagens/Home 1.svg" alt="Home" width="612px" height="395px">
+        </div>
+        <button type="button">Saiba mais > </button>
+
+      </section>
+    </div>
   </main>
 </body>
 
