Versao desktop finalizada.

--- a/src/index.html
+++ b/src/index.html
@@ -34,9 +34,9 @@
       <section id="perfil">
         <img src="./assets/imagens/perfil.svg" width="746px" height="508px" alt="perfil da empresa">
         <section id="perfil-texto">
-          <h1>
+          <h2>
             Perfil da Empresa
-          </h1>
+          </h2>
           <p>Fundada em 1960, a Salles Contabilidade é uma empresa de serviços completos, oferecendo soluções acessíveis
             em
             contabilidade para pessoas e negócios locais e internacionais.</p>
@@ -44,7 +44,7 @@
         </section>
       </section>
       <section id="servicos">
-        <h1>Nossos Serviços</h1>
+        <h2>Nossos Serviços</h2>
         <div id="servicos-container">
           <div id="listas-container">
             <div id="lista-numeros">
@@ -80,8 +80,71 @@
         <button type="button">Saiba mais > </button>
 
       </section>
+      <section id="clientes">
+        <h2>Nossos Serviços</h2>
+        <p>Desde o começo, prestamos serviços de confiança a nossos clientes. Tivemos a honra de sermos a primeira
+          empresa na
+          escolha das seguintes corporações:</p>
+        <section id="cards-container">
+          <div class="card">
+            <img src="./assets/imagens/img-banco1.svg" alt="imagem 1">
+            <p>Banco the two</p>
+          </div>
+          <div class="card">
+            <img src="./assets/imagens/img-banco.svg" alt="imagem 2">
+            <p>Banco dezo</p>
+          </div>
+          <div class="card">
+            <img src="./assets/imagens/img-banco2.svg" alt="imagem 3">
+            <p>Banco Db</p>
+          </div>
+
+        </section>
+        <button type="button">Saiba mais > </button>
+      </section>
+      <section id="quote">
+        <h2>"Contabilidade é a nossa paixão. Cuidaremos dela, para que você possa se concentrar nas suas."</h2>
+        <p>— Karol Salles, CEO</p>
+      </section>
+      <section id="contato">
+        <h2>Vamos trabalhar juntos.</h2>
+        <section id="contato-container">
+          <img src="./assets/imagens/contact.svg" alt="Contato">
+          <div id="contato-lista">
+            <div class="info">
+              <h2>Endereço</h2>
+              <p>Rua Osasco, cidade </p>
+              <p> Osasco- Sp</p>
+            </div>
+            <div class="info">
+              <h2>Telefone</h2>
+              <p>(11) 4002-8922</p>
+            </div>
+            <div class="info">
+              <h2>Email</h2>
+              <p>contato@salles.com</p>
+            </div>
+          </div>
+
+        </section>
+      </section>
     </div>
   </main>
+  <footer>
+    <ul>
+      <li><a target=”_blank” href="https://pt-br.facebook.com/"><img src="./assets/imagens/facebook (2) 1.svg"
+            alt="facebook-logo"></a>
+      </li>
+      <li><a target=”_blank” href="https://www.instagram.com/"><img src="./assets/imagens/instagram (1) 1.svg"
+            alt="instagram-logo"></a>
+      </li>
+      <li><a target=”_blank” href="https://br.linkedin.com/"><img src="./assets/imagens/linkedin 1.svg"
+            alt="linkedin-logo"></a></li>
+      <li><a target=”_blank” href="https://www.youtube.com/"><img src="./assets/imagens/youtube 1.svg"
+            alt="youtube-logo"></a></li>
+    </ul>
+    <p>© Salles Contabilidade - CNPJ 00010200202/10</p>
+  </footer>
 </body>
 
 </html>
